# ollama-commit-message

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
ollama_commit_message/: generate_commit_message.py
